tdf#112199 Fix and extend enabled state for items in find toolbar

Fixes bug that sets enabled state for 'Find Next' and 'Find All'
instead of the intended 'Find Previous' and 'Find Next'.

Adds the same enabled state dependency to 'Find All'.

Change-Id: I01d4f0effaa343e1498d9610755b256761dacfd7
Reviewed-on: https://gerrit.libreoffice.org/41264
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Tested-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>